--- a/main_app/templates/registration/password_reset_form.html
+++ b/main_app/templates/registration/password_reset_form.html
@@ -1,17 +1,18 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
 {% block content %}
 <div class="login-viewport">
   <div class="login-card fade-in-up card">
     <div class="card-body">
-      <h2 class="mb-2 text-center">Reset your password</h2>
-      <p class="text-muted text-center">Enter the email address for your account and we'll send instructions to reset your password.</p>
+      <h2 class="mb-2 text-center">{% trans "Reset your password" %}</h2>
+      <p class="text-muted text-center">{% trans "Enter the email address for your account and we'll send instructions to reset your password." %}</p>
       <form method="post" class="mt-3">
         {% csrf_token %}
         {{ form.email.label_tag }}
         {{ form.email }}
         <div class="mt-3 d-flex justify-content-center">
-          <button type="submit" class="btn btn-success">Send reset email</button>
+          <button type="submit" class="btn btn-success">{% trans "Send reset email" %}</button>
         </div>
       </form>
     </div>
